syntax = "proto3";

package com.road.yishi.proto.stackhead;

message StackHeadOpenTimeMsg {
  string startTime = 1;
  string endTime = 2;
}
